--- a/multi_modal_retrieval_backyard_birds.ipynb
+++ b/multi_modal_retrieval_backyard_birds.ipynb
@@ -28,8 +28,8 @@
         "* Step 1: Download backyard birds text and images\n",
         "* Step 2: Build text index for vector store and define text query engine\n",
         "* Step 3: Build image index for vector store using CLIP embeddings\n",
-        "* Step 4: During query time, generate both text + CLIP query embeddings, retrieve both text + images\n",
-        "* Step 5: Get multi-modal retrieval results for sample queries\n",
+        "* Step 4: Define functions for image query\n",
+        "* Step 5: Multi-modal retrieval of both image and text for sample queries\n",
         "\n",
         "Models used in this notebook:\n",
         "* OpenAI CLIP model ViT-B/32 for image embeddings\n",
