--- a/multi_modal_retrieval_backyard_birds.ipynb
+++ b/multi_modal_retrieval_backyard_birds.ipynb
@@ -27,9 +27,8 @@
       "source": [
         "* Step 1: Download backyard birds text and images\n",
         "* Step 2: Build text index for vector store and define text query engine\n",
-        "* Step 3: Build image index for vector store using CLIP embeddings\n",
-        "* Step 4: Define functions for image query\n",
-        "* Step 5: Multi-modal retrieval of both image and text for sample queries\n",
+        "* Step 3: Build image index for vector store using CLIP embeddings, and define functions for image query\n",
+        "* Step 4: Multi-modal retrieval of both image and text for sample queries\n",
         "\n",
         "Models used in this notebook:\n",
         "* OpenAI CLIP model ViT-B/32 for image embeddings\n",
