--- a/multi_modal_retrieval_backyard_birds.ipynb
+++ b/multi_modal_retrieval_backyard_birds.ipynb
@@ -17,7 +17,7 @@
         "id": "3bbc9a0e"
       },
       "source": [
-        "# Multi-Modal Retrieval with Text Embedding and CLIP Image Embedding for Backyard Birds\n",
+        "# Multimodal Retrieval with Text Embedding and CLIP Image Embedding for Backyard Birds\n",
         "\n",
         "A little app I created for my bird-lover daughter. :-)"
       ]
@@ -28,7 +28,7 @@
         "* Step 1: Download backyard birds text and images\n",
         "* Step 2: Build text index for vector store and define text query engine\n",
         "* Step 3: Build image index for vector store using CLIP embeddings, and define functions for image query\n",
-        "* Step 4: Multi-modal retrieval of both image and text for sample queries\n",
+        "* Step 4: Multimodal retrieval of both image and text for sample queries\n",
         "\n",
         "Models used in this notebook:\n",
         "* OpenAI CLIP model ViT-B/32 for image embeddings\n",
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "fc691ca8",
       "metadata": {
         "id": "fc691ca8",
@@ -238,7 +238,7 @@
         "id": "L-gJxBiqZ8hd"
       },
       "id": "L-gJxBiqZ8hd",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,12 +258,12 @@
         "id": "5dbb2fc8"
       },
       "source": [
-        "### Download multi-modal backyard birds text"
+        "### Download multimodal backyard birds text"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "e4294270",
       "metadata": {
         "id": "e4294270",
@@ -366,12 +366,12 @@
         "id": "9KiMBnS9QHU7"
       },
       "id": "9KiMBnS9QHU7",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "eca1e93c",
       "metadata": {
         "id": "eca1e93c",
@@ -505,7 +505,7 @@
         "outputId": "78d0ab94-82c0-4535-d077-e8bf6eee9ddf"
       },
       "id": "cFeK_22_SB7I",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -525,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "6976c3a7",
       "metadata": {
         "id": "6976c3a7"
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "5455d8c6",
       "metadata": {
         "id": "5455d8c6",
@@ -655,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "5aa0a49b",
       "metadata": {
         "id": "5aa0a49b",
@@ -712,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "84e2e3d4",
       "metadata": {
         "id": "84e2e3d4",
@@ -801,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "746715a0",
       "metadata": {
         "id": "746715a0"
@@ -835,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "6acc0b06",
       "metadata": {
         "id": "6acc0b06"
@@ -878,7 +878,7 @@
         "id": "CazkP9vhcb4w"
       },
       "id": "CazkP9vhcb4w",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -888,12 +888,12 @@
         "id": "3ea1e2fb"
       },
       "source": [
-        "## Multi-modal retrieval of both image and text for sample queries"
+        "## Multimodal retrieval of both image and text for sample queries"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "61fdd3a0",
       "metadata": {
         "id": "61fdd3a0",
@@ -952,7 +952,7 @@
         "outputId": "da5b4507-0b07-4aee-e3de-92f5cbfbe388"
       },
       "id": "8VwaolAVXwdA",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "7c8e4b84",
       "metadata": {
         "id": "7c8e4b84",
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "08f21c2f",
       "metadata": {
         "id": "08f21c2f",
@@ -1075,7 +1075,7 @@
         "outputId": "f71b6659-d1ed-480a-feab-34ce7ba815ff"
       },
       "id": "lJWnFTfrF4Iz",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
