--- a/multi_modal_retrieval_backyard_birds.ipynb
+++ b/multi_modal_retrieval_backyard_birds.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# Multimodal Retrieval with Text Embedding and CLIP Image Embedding for Backyard Birds\n",
         "\n",
-        "A little app I created for my bird-lover daughter. :-)"
+        "A little app I made for my daughter who loves birds. :-)"
       ]
     },
     {
